--- a/Desingn Pattern/Desingn Pattern.csproj
+++ b/Desingn Pattern/Desingn Pattern.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bike.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="IVehicale.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Singleton.cs" />
+    <Compile Include="VehicalFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
